--- a/public/prototype/prototype.css
+++ b/public/prototype/prototype.css
@@ -1,6 +1,17 @@
-/* body { */
-  /* background-color: #aaaaaa; */
-/* } */
+* {
+  margin: 0rem;
+  padding: 0rem;
+  border-width: 0rem;
+  color: #565656;
+}
+*:focus {
+  outline: none;
+}
+html,
+body {
+  width: 100%;
+  height: 100%;
+}
 
 ul {
   margin: 0;
@@ -18,44 +29,8 @@ a {
   color: #fff;
 }
 
-.menuopen{
-  z-index: 1;
-  position: absolute;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  border-width: 0;
-  width: 0;
-  height: 0;
-}
-.menuopen:focus {
-  outline: 0;
-}
-.menuopen:before, .menuopen:after {  
-  position: absolute;
-  content: "";
-  display: block;
-  height: 12px;
-  width: 40px;
-  border-color: gray;
-  border-top-style: solid;
-  border-bottom-style: solid;
-}
-.menuopen:before{
-    top: 4px;
-    border-top-width: 4px;
-    border-bottom-width: 2px;
-}
-.menuopen:after{    
-    top: 22px;
-    border-top-width: 2px;
-    border-bottom-width: 4px;
-}
-.menuopen:checked:before, .menuopen:checked:after {
-  border-color: black;
-}
-
 .menu {
+  z-index: 2;
   position: fixed;
   top: 0;
   left: -340px;
@@ -66,10 +41,20 @@ a {
   transition: left .5s, right .5s;
   background-color: rgba(86, 86, 86, .7);
 }
-.menu:hover {
-  left: 0;
+
+.filter {
+  z-index: 1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: #555555;
+  opacity: 0.0;
+  /* タッチイベントをonclickイベントで実行される。 */
+  cursor: pointer;
 }
 
-#root > .menuopen:checked + .menu {
-  left: 0;
+.contents {
+  z-index: 0;
+  /* タッチイベントをonclickイベントで実行される。 */
+  cursor: pointer;
 }
