--- a/public/debug.css
+++ b/public/debug.css
@@ -16,3 +16,14 @@ body {
   width: 100vw;
   height: 100vh;
 }
+
+table {
+  border-collapse: collapse;
+}
+
+table thead tr td,
+table tbody tr td {
+  border: 0.1rem solid #555555;
+  padding: 0.2rem;
+  text-align: right;
+}
