Add font for debug

--- a/public/debug.css
+++ b/public/debug.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+
 * {
   margin: 0;
   padding: 0;
@@ -26,4 +28,5 @@ table tbody tr td {
   border: 0.1rem solid #555555;
   padding: 0.2rem;
   text-align: right;
+  font-family: 'Inconsolata', monospace;
 }
