Modify Confirmed SVG define on react

--- a/public/debug.css
+++ b/public/debug.css
@@ -30,3 +30,10 @@ table tbody tr td {
   text-align: right;
   font-family: 'Inconsolata', monospace;
 }
+
+svg {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  viewBox: "0 0 1000 1000";
+}
