--- a/public/prototype/menu.css
+++ b/public/prototype/menu.css
@@ -11,10 +11,28 @@
   /* outline: none; */
 /* } */
 
+* {
+  cursor: "pointer"
+}
+
 html,
 body {
   width: 100vw;
   height: 100vh;
+}
+
+label {
+  color: #FFFFFF;
+}
+
+.menuList {
+  border-style: solid;
+  margin: 32px;
+}
+
+.menuList > p {
+  color: #FFFFFF;
+  font-weight: bolder;
 }
 
 #open {
@@ -29,15 +47,27 @@ body {
 #menu {
   z-index: 2;
   position: fixed;
-  top: 0;
-  left: -340px; /* メニューのwidth + padding */
-  width: 300px; /* メニューのwidth */
+  left: -40%; /* メニューのwidth + padding */
+  width: 30%; /* メニューのwidth */
   height: 100%;
-  padding: 20px;
-  transition: left .5s, right .5s; /* アニメーション */
-  background-color: rgba(86, 86, 86, .7);
+  transition: left .3s, right .3s; /* アニメーション */
+  background-color: #000000;
+  font-size: 75%;
+}
+
+#filter {
+  z-index: 1;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #555555;
+  opacity: 0.5;
+  visibility: hidden;
 }
 
 #contents {
   z-index: 0;
+  position: fixed;
+  width: 100%;
+  height: 100%;
 }
