--- a/public/prototype/menu.css
+++ b/public/prototype/menu.css
@@ -1,3 +1,5 @@
+@import url("menuIcon.css");
+
 * {
   margin: 0;
   padding: 0;
@@ -70,4 +72,6 @@ label {
   position: fixed;
   width: 100%;
   height: 100%;
+  color: #FFFFFF;
+  background-color: #333333; 
 }
