--- a/public/prototype/menu.css
+++ b/public/prototype/menu.css
@@ -54,18 +54,42 @@ label {
   width: 40%;
   height: 100%;
   font-size: 75%;
-  background-color: #777777;
+  background-color: #485867;
   transition: left .3s, right .3s;
-  transform:skewX(-12deg);
+  transform: skewX(-12deg);
 }
 
 #innerMenu {
   position: fixed;
-  left: -20%;
-  width: 80%;
-  padding: 10%;
-  background-color: #000000; /* 範囲確認用。後で #777777 に変更する。*/
-  transform:skewX(12deg);
+  left: -18%;
+  width: 100%;
+  height: 50%;
+  padding: 2.5%;
+  background-color: #485867;
+  transform: skewX(12deg);
+}
+
+.menuItem {
+  border-style: solid;
+  border-color: #899ba9;
+  border-width: 0.1rem;
+  margin-bottom: 1rem;
+  transform: skewX(-12deg);
+}
+
+.menuItem > p {
+  font-size: 0.8rem;
+  text-align: center;
+  color: #e3e4e5;
+  transform: skewX(12deg);
+}
+
+.menuItem:hover {
+  background-color: #80adfd;
+}
+
+.menuItem:hover > p {
+  color: #0f192a;
 }
 
 #filter {
@@ -84,9 +108,8 @@ label {
   width: 100%;
   height: 100%;
   color: #FFFFFF;
-  background-color: #333333; 
+  background-color: #17202b; 
 }
-
 
 /*
  * 角度確認用
@@ -94,4 +117,3 @@ label {
 img {
   padding-left: 10%;
 }
-
