--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Inconsolata');
+
 * {
   margin: 0;
   padding: 0;
@@ -16,4 +18,20 @@ html,
 body {
   width: 100vw;
   height: 100vh;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+span
+{
+  color: #e3e4e5;
+}
+
+h2 {
+  margin: 1rem;
 }
