--- a/public/index.css
+++ b/public/index.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css?family=Oswald');
 @import url('https://fonts.googleapis.com/css?family=Inconsolata');
 
 * {
@@ -6,7 +7,7 @@
   border-width: 0;
   color: #565656;
   font-size: 100%;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Oswald', sans-serif;
   cursor: pointer;
 }
 
