Fix checkbox style for iPhone

--- a/public/src/common/slideCheckbox.css
+++ b/public/src/common/slideCheckbox.css
@@ -26,8 +26,10 @@
 
 .slideCheckBox > input[type=checkbox] {
   appearance: none;
-  -moz-appearance: none;
   -webkit-appearance: none;
+  -moz-appearance: none;
+  border-width: 0;
+  background: none;
 }
 
 /*
