--- a/public/index.css
+++ b/public/index.css
@@ -7,7 +7,7 @@
   padding: 0;
   border-width: 0;
   color: #565656;
-  font-size: 100%;
+  font-size: 1rem;
   font-family: 'Oswald', sans-serif;
   cursor: pointer;
 }
