--- a/public/prototype/motec.css
+++ b/public/prototype/motec.css
@@ -29,7 +29,6 @@ body {
   position: fixed;
   width: 100%;
   height: 100%;
-  background-color: #17202b; /*  後で消す。 */
 }
 
 .table {
@@ -88,8 +87,7 @@ body {
 }
 
 .valueCell > div {
-  text-align: right;
-  background-color: #995555;
+  background-color: #53524F;
 }
 
 .valueCell > div > span {
@@ -102,17 +100,12 @@ body {
 .value1Cell {
   width: 11rem;
   margin-left: 0.1rem;
-  text-align: right;
 }
 
 .value1Cell > div {
   width: 9rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
-}
-
-.value1Cell > div > span {
-  width: 100%;
 }
 
 .value2Cell {
@@ -123,80 +116,23 @@ body {
 .value2Cell > div {
   width: 10rem;
   margin-right: -2.25rem;
-  text-align: center;
 }
 
 .value2Cell > div > span {
-  width: 100%;
   color: #E3E4E5;
   font-family: 'Inconsolata', monospace;
   font-size: 1.5rem;
   margin-right: 1rem;
 }
 
-.value2Cell > div > span {
-}
-
-.lastValueCell {
-}
-
-.fuelValueCell {
-}
-
-.fuelOherHeaderCell {
-}
-
-.fuelOherValue1Cell {
-}
-
-.fuelOherValue2Cell {
-}
-
-
-
-
-
-/* .value2Cell { */
-  /* background-color: #53524F; */
-  /* width: 22.5rem; */
-  /* margin-left: 1rem; */
-/* } */
-
-/* .value2Cell > div { */
-  /* width: 100%; */
-  /* height: 6rem; */
-  /* background-color: #53524F; */
-  /* margin-left: 1rem; */
-  /* margin-right: -1rem; */
-  /* text-align: right; */
-/* } */
-
-/* .value2Cell > div > span { */
-  /* width: 100%; */
-  /* color: #E3E4E5; */
-  /* font-family: 'Inconsolata', monospace; */
-  /* font-size: 3rem; */
-  /* margin-right: 1rem; */
-/* } */
-
-
-
-
-
-
-
-/* .table { */
-  /* width: 80%; */
-  /* margin: 2rem; */
-/* } */
-
-.headerColumn {
+.fuelRecord {
   margin-bottom: 0.2rem;
   display: flex;
   flex-direction: row;
 }
 
-.headerColumn > div {
+.fuelRecord > .iconCell,
+.fuelRecord > .fuelValueCell {
   transform: skewX(-12deg);
   display: flex;
   flex-direction: row;
@@ -204,110 +140,79 @@ body {
   align-items: center;
 }
 
-.headerColumn > div > div {
-  height: 3rem;
+.fuelRecord > .iconCell > div,
+.fuelRecord > .fuelValueCell > div {
   transform: skewX(12deg);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.headerColumn > div > div > span {
-  font-color: ##565656;
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.3rem;
-}
-
-.bodyColumn {
-  margin-bottom: 0.2rem;
-  display: flex;
-  flex-direction: row;
-}
-
-.bodyColumn > div {
-  transform: skewX(-12deg);
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
-}
-
-.bodyColumn > div > div {
-  height: 3rem;
-  transform: skewX(12deg);
+  height: 6rem;
   display: flex;
   flex-direction: row;
   justify-content: flex-end;
   align-items: center;
 }
 
-.headerCell {
-  background-color: #C1D9F0;
+.fuelValueCell {
+  width: 8rem;
+  margin-left: 0.1rem;
 }
 
-.headerCell > div {
-  width: 5rem;
-  margin-left: -1rem;
+.fuelValueCell > div {
+  width: 6rem;
+  margin-left: 1rem;
   margin-right: 1rem;
+}
+
+.fuelDetailsTable {
+  margin-left: 2.75rem;
+  background-color: #53524F;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.fuelDetailsTable > div {
+  width: 12rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.fuelDetailsTable > div > div {
+  width: 50%;
+  transform: skewX(-12deg);
+}
+
+.fuelDetailsTable > div > div > div {
+  height: 3rem;
+  transform: skewX(12deg);
+  margin-left: 4rem;
+  margin-right: 0.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.fuelDetailsRecord2 {
+  margin-left: -1.2675rem;
+}
+
+.fuelDetailsHeaderCell {
   background-color: #C1D9F0;
 }
 
-.headerCell > div > span {
-  font-family: 'Oswald', sans-serif;
-  font-size: 1.3rem;
+.fuelDetailsRecord1 > .fuelDetailsHeaderCell > div > span {
+  margin-left: -3.25rem;
 }
 
-.lapCountCell {
-  background-color: #30CDFF;
+.fuelDetailsRecord2 > .fuelDetailsHeaderCell > div > span {
+  margin-left: -3rem;
 }
 
-.lapCountCell > div {
-  width: 4rem;
-  margin-left: 0.5rem;
-  margin-right: 0.5rem;
-  text-align: right;
+.fuelDetailsRecord2 > .fuelDetailsValueCell > div > span {
+  margin-left: 1.25rem;
 }
 
-.lapCountCell > div > span {
-  color: #063B4B;
-  font-family: 'Inconsolata', monospace;
-  font-size: 2.25rem;
-}
-
-.sectorCell {
-  background-color: #53524F;
-  margin-right: 0.1rem
-}
-
-.sectorCell > div {
-  width: 11rem;
-  margin-left: 0.5rem;
-  text-align: center;
-}
-
-.sectorCell > div > span {
-  width: 100%;
-  color: #E3E4E5;
-  font-family: 'Inconsolata', monospace;
-  font-size: 2.25rem;
-}
-
-.lapTimeCell {
-  background-color: #75726D;
-}
-
-.lapTimeCell > div {
-  width: 11rem;
-  background-color: #75726D;
-  margin-left: 0.5rem;
-  margin-right: -0.5rem;
-  text-align: center;
-}
-
-.lapTimeCell > div > span {
-  width: 100%;
-  color: #E3E4E5;
-  font-family: 'Inconsolata', monospace;
-  font-size: 2.25rem;
+.fuelDetailsHeaderCell {
+  margin-left: -4.5rem;
 }
