--- a/public/prototype/motec.css
+++ b/public/prototype/motec.css
@@ -7,7 +7,6 @@
   border-width: 0;
   color: #565656;
   font-size: 100%;
-  font-family: 'Open Sans', sans-serif;
 }
 
 *:focus {
@@ -198,4 +197,5 @@ body {
 
 .fuelDetailsHeaderCell > div > span {
   margin-left: -3.25rem;
+  font-family: 'Oswald', sans-serif;
 }
