--- a/public/prototype/default.css
+++ b/public/prototype/default.css
@@ -71,11 +71,11 @@ body {
 .rightContents {
   width: 100%;
   height: 100%;
-  background-color: #777777;
+  background-color: #000000;
 
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
 }
 
 /*
@@ -116,6 +116,13 @@ body {
   color: #90C143;
 }
 
+.border {
+  border-top-width: 0.2rem;
+  border-top-style: solid;
+  border-top-color: #777777;
+  background-color: #000000;
+}
+
 /*
  * session
  */
@@ -138,7 +145,6 @@ body {
 .sessionHeader {
   width: 9rem;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .sessionValue {
@@ -149,7 +155,6 @@ body {
  * position
  */
 .position {
-  background-color: #000000;
   display: flex;
   align-items: center;
 }
@@ -167,7 +172,6 @@ body {
 .positionHeader {
   width: 9rem;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
   display: flex;
   align-items: center;
 }
@@ -192,7 +196,6 @@ body {
 .currentLap {
   width: 9rem;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
   display: flex;
   align-items: center;
 }
@@ -214,12 +217,18 @@ body {
  * timeLogs
  */
 .timeLogs {
+  border-top-width: 0.1rem;
+  border-top-style: solid;
+  border-top-color: #777777;
+  background-color: #000000;
   display: flex;
   flex-direction: column;
 }
 
 .timeLogs > div {
-  margin-top: 0.1rem;
+  border-top-width: 0.1rem;
+  border-top-style: solid;
+  border-top-color: #777777;
   background-color: #000000;
   height: 2.5rem;
   display: flex;
@@ -230,7 +239,7 @@ body {
 }
 
 .timeLogLap {
-  width: 2.5rem;
+  width: 1.25rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   display: flex;
@@ -280,11 +289,10 @@ body {
 .otherTimeHeader {
   width: 6rem;
   margin-left: 0.5rem;
-  margin-right: 0.5rem;
 }
 
 .otherTimeLap {
-  width: 2.5rem;
+  width: 1.25rem;
   margin-right: 0.5rem;
   display: flex;
   align-items: center;
