--- a/public/prototype/default.css
+++ b/public/prototype/default.css
@@ -253,7 +253,7 @@ body {
   align-items: center;
 }
 
-.timeLogTIme {
+.timeLogTime {
   width: 9rem;
   display: flex;
   justify-content: flex-end;
