Clean rename common directory to share directory

--- a/public/prototype/default.css
+++ b/public/prototype/default.css
@@ -33,7 +33,7 @@ body {
 }
 
 /*
- * common
+ * share
  */
 .header > span {
   color: #C1D9F0;
@@ -84,7 +84,7 @@ body {
 }
 
 /*
- * common
+ * share
  */
 .lap > span {
   color: #FFFFFF;
