--- a/public/src/contents/default/default.css
+++ b/public/src/contents/default/default.css
@@ -10,7 +10,7 @@
 }
 
 /*
- * common
+ * share
  */
 .header > span {
   color: #C1D9F0;
@@ -61,7 +61,7 @@
 }
 
 /*
- * common
+ * share
  */
 .lap > span {
   color: #FFFFFF;
