--- a/public/src/contents/default/default.css
+++ b/public/src/contents/default/default.css
@@ -44,22 +44,18 @@
 }
 
 .session > div {
-  height: 3rem;
+  height: 2.5rem;
   display: flex;
   align-items: center;
 }
 
 .session > div > span {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 
 .sessionHeader {
-  width: 9rem;
+  width: 8.5rem;
   margin-left: 0.5rem;
-}
-
-.sessionValue {
-  justify-content: flex-start;
 }
 
 /*
@@ -71,17 +67,17 @@
 }
 
 .position > div {
-  height: 3rem;
+  height: 2.5rem;
   display: flex;
   align-items: center;
 }
 
 .position> div > span {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 
 .positionHeader {
-  width: 9rem;
+  width: 8.5rem;
   margin-left: 0.5rem;
   display: flex;
   align-items: center;
@@ -96,15 +92,15 @@
 }
 
 .current > div {
-  height: 3rem;
+  height: 2.5rem;
 }
 
 .current > div > span {
-  font-size: 2.5rem;
+  font-size: 2.25rem;
 }
 
 .currentLap {
-  width: 9rem;
+  width: 8.5rem;
   margin-left: 0.5rem;
   display: flex;
   align-items: center;
@@ -113,7 +109,6 @@
 .currentLapCount {
   margin-right: 1rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
@@ -138,16 +133,15 @@
   border-top-width: 0.1rem;
   border-top-style: solid;
   border-top-color: #777777;
-  height: 2.5rem;
+  height: 2rem;
   display: flex;
 }
 
 .timeLogs > div > div > span {
-  font-size: 1.75rem;
+  font-size: 1.5rem;
 }
 
 .timeLogLap {
-  width: 1.25rem;
   margin-left: 0.5rem;
   margin-right: 0.5rem;
   display: flex;
@@ -155,21 +149,19 @@
 }
 
 .timeLogLapCount {
-  width: 3.5rem;
+  margin-right: 1rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
 .timeLogTime {
-  width: 9rem;
+  margin-right: 1rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
 .timeLogDelta {
-  width: 10rem;
+  width: 7.5rem;
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -184,7 +176,7 @@
 }
 
 .otherTime > div {
-  height: 2.5rem;
+  height: 2.25rem;
   display: flex;
   align-items: center;
 }
@@ -196,25 +188,22 @@
 .otherTimeHeader {
   width: 6rem;
   margin-left: 0.5rem;
+  align-items: center;
 }
 
 .otherTimeLap {
-  width: 1.25rem;
-  margin-right: 0.5rem;
+  margin-right: 1rem;
   display: flex;
   align-items: center;
 }
 
 .otherTimeLapCount {
-  width: 3.5rem;
+  margin-right: 1rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
 
 .otherTimeTime {
-  width: 9rem;
   display: flex;
-  justify-content: flex-end;
   align-items: center;
 }
