--- a/public/src/share/largeContent.css
+++ b/public/src/share/largeContent.css
@@ -40,6 +40,7 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
@@ -57,7 +58,7 @@
   margin-top: 1rem;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 /********************************
